--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "@popmotion/popcorn": "^0.4.4",
     "framer-motion": "^7.6.4",
-    "next": "13.0.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0"
   }
 }
